--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@types/mapbox-gl": "^2.7.19",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-map-gl": "^7.1.7",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
