--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-map-gl": "^7.1.7",
+    "recharts": "^2.10.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
